✨ Add truth or dare
