# docs/swagger.json
@@ -149,6 +149,29 @@
                 }
             }
         },
+        "/games/{gameid}/cards/truthordare": {
+            "get": {
+                "tags": [
+                    "GameCard"
+                ],
+                "summary": "Get truth or dare game cards",
+                "operationId": "get-truth-or-dare-cards",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/TruthOrDareCards"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/games/{gameid}/cards/{id}": {
             "put": {
                 "description": "Update a game card",
@@ -485,6 +508,10 @@
                         "$ref": "#/definitions/GameMode"
                     }
                 },
+                "type": {
+                    "description": "the card's type, mostly used for \"truth or dare\"",
+                    "type": "string"
+                },
                 "updated_at": {
                     "description": "updated time of game card",
                     "type": "string"
@@ -513,6 +540,11 @@
             ],
             "properties": {
                 "content": {
+                    "description": "the card's content",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "the card's type, mostly used for \"truth or dare\"",
                     "type": "string"
                 }
             }
@@ -607,6 +639,25 @@
                 "updated_at": {
                     "description": "updated time of group",
                     "type": "string"
+                }
+            }
+        },
+        "TruthOrDareCards": {
+            "type": "object",
+            "properties": {
+                "dare_cards": {
+                    "description": "dare cards",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/GameCard"
+                    }
+                },
+                "truth_cards": {
+                    "description": "truth cards",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/GameCard"
+                    }
                 }
             }
         }
